--- a/Practice_python_codes.ipynb
+++ b/Practice_python_codes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2xVtNNerHEUOt2H9gP0KD",
+      "authorship_tag": "ABX9TyP1oTT7vUgV0YMkyDJg4sJX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14974,7 +14974,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15009,7 +15009,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15045,7 +15045,7 @@
         "id": "AqhKahn522Hx",
         "outputId": "6f9b701d-90a8-4986-ea38-a7dd3691ddaf"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15083,7 +15083,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15300,7 +15300,7 @@
           "height": 36
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15337,7 +15337,7 @@
           "height": 36
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15367,7 +15367,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15394,7 +15394,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15404,6 +15404,68 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from random import choice, randint\n",
+        "from datetime import datetime, timedelta\n",
+        "\n",
+        "# Define constants\n",
+        "origins = ['New York', 'Chicago', 'Houston', 'Atlanta', 'Miami', 'Seattle']\n",
+        "destinations = ['Los Angeles', 'Miami', 'Seattle', 'Denver', 'Chicago', 'Houston']\n",
+        "carriers = ['Carrier A', 'Carrier B', 'Carrier C']\n",
+        "statuses = ['Delivered', 'In Transit', 'Delayed']\n",
+        "warehouses = ['W001', 'W002', 'W003']\n",
+        "customers = [f'C{str(i).zfill(4)}' for i in range(1001, 1021)]\n",
+        "\n",
+        "# Generate shipment data\n",
+        "def generate_data(num_rows):\n",
+        "    data = []\n",
+        "    for i in range(1, num_rows + 1):\n",
+        "        shipment_id = f'S{str(i).zfill(3)}'\n",
+        "        origin = choice(origins)\n",
+        "        destination = choice(destinations)\n",
+        "        date_shipped = datetime(2024, 6, 1) + timedelta(days=randint(0, 30))\n",
+        "        date_delivered = date_shipped + timedelta(days=randint(1, 7))\n",
+        "        carrier = choice(carriers)\n",
+        "        shipping_cost = round(np.random.uniform(150, 350), 2)\n",
+        "        weight = round(np.random.uniform(5, 30), 1)\n",
+        "        volume = round(weight * np.random.uniform(0.05, 0.1), 2)\n",
+        "        status = choice(statuses)\n",
+        "        warehouse_id = choice(warehouses)\n",
+        "        customer_id = choice(customers)\n",
+        "\n",
+        "        data.append([shipment_id, origin, destination, date_shipped.strftime('%Y-%m-%d'),\n",
+        "                     date_delivered.strftime('%Y-%m-%d'), carrier, shipping_cost, weight, volume,\n",
+        "                     status, warehouse_id, customer_id])\n",
+        "\n",
+        "    return pd.DataFrame(data, columns=['ShipmentID', 'Origin', 'Destination', 'DateShipped', 'DateDelivered',\n",
+        "                                       'Carrier', 'ShippingCost', 'Weight (kg)', 'Volume (m³)', 'Status',\n",
+        "                                       'WarehouseID', 'CustomerID'])\n",
+        "\n",
+        "# Generate 1000 rows of shipment data\n",
+        "df = generate_data(1000)\n",
+        "# df.to_csv('/mnt/data/shipments_data.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "_Ma17qhccQ1p"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv('Logestic_data_.csv',index=False)"
+      ],
+      "metadata": {
+        "id": "mVqMVGHNcUfO"
+      },
+      "execution_count": 2,
+      "outputs": []
     }
   ]
 }
